<resources>
    <string name="app_name">Calcula IMC Kotlin</string>
    <string name="peso">Peso:</string>
    <string name="hint_peso">Peso em Kg </string>
    <string name="altura">Altura :</string>
    <string name="hint_altura">Altura em m</string>
    <string name="imc">IMC</string>
    <string name="calcular">Calcular</string>
    <string name="limpar">Limpar</string>
    <string name="zeros">0.0</string>
    <string name="erro_peso">Campo peso deve ser preenchido</string>
    <string name="erro_altura">Campo altura deve ser preenchido</string>
    <string name="long_limpar">Botão para Limpar</string>
</resources>